Add intel-openmp to requirements.txt for macOS

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 
 # Intel Compile Runtime provides Intel SVML, which speeds up Numba
 icc-rt
+intel-openmp; sys_platform == "darwin"
 matplotlib
 numba
 # NumbaLSODA cannot yet be compiled automatically on the GitHub Actions Windows runners
