Add intel-openmp to setup.cfg extras_require for macOS

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,4 +30,7 @@ packages =
 python_requires = >=3.6
 
 [options.extras_require]
-performance = icc-rt; tbb
+performance =
+    icc-rt
+    intel-openmp; sys_platform=="darwin"
+    tbb
