Add NumbaLSODA to setup.cfg extras_require

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ packages =
 python_requires = >=3.6
 
 [options.extras_require]
+NumbaLSODA = NumbaLSODA
 performance =
     icc-rt
     intel-openmp; sys_platform=="darwin"
