--- a/requirements-old.txt
+++ b/requirements-old.txt
@@ -3,7 +3,8 @@ icc-rt
 llvmlite == 0.29.0
 matplotlib
 numba == 0.45.1
-git+git://github.com/Nicholaswogan/NumbaLSODA.git
+# NumbaLSODA cannot yet be compiled automatically on the GitHub Actions Windows runners
+NumbaLSODA; sys_platform != "win32"
 # NumPy 1.20.0 had an ABI change that made it incompatible with old Numba versions
 # https://github.com/numba/numba/issues/6041#issuecomment-665123183
 numpy == 1.19.0
