--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,11 @@
 # The dependency files could be combined with the line below, but this would double-install packages
-# in the conda environment.
+# if some of the packages are already installed with conda.
 # -r requirements.txt
 allure-pytest
 colorama
+# h5py
+# orjson
+# pandas
 # For Numba system info
 psutil
 pyan3 >=1.1.1, !=1.2.0
