Fix Python version for workflows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Setup Python
         uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PRIMARY_PYTHON_VERSION }}
       - name: Print Python version
         run: python -V
       - name: Install graphviz
@@ -57,6 +59,8 @@ jobs:
     steps:
       - name: Setup Python
         uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PRIMARY_PYTHON_VERSION }}
       - name: Print Python version
         run: python -V
       - name: Checkout
