--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -1,5 +1,7 @@
 name: Test on macOS
 on: [push, workflow_dispatch]
+env:
+  PRIMARY_PYTHON_VERSION: 3.8
 jobs:
   test:
     runs-on: macos-latest
@@ -8,8 +10,8 @@ jobs:
         - name: Setup Python
           uses: actions/setup-python@v2
           # macOS minutes cost 10x what Linux does, so testing multiple Python versions would be quite costly
-          # with:
-            # python-version: 3.9
+          with:
+            python-version: ${{ env.PRIMARY_PYTHON_VERSION }}
         - name: Print Python version
           run: python -V
         - name: Checkout
