--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,7 +92,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        python-version: [ 3.6, 3.7, 3.8, 3.9 ]
+        python-version: [ 3.6, 3.7, 3.8, 3.9, 3.10 ]
     steps:
     - name: Setup Python
       uses: actions/setup-python@v2
@@ -194,7 +194,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        python-version: [ 3.6, 3.7, 3.8, 3.9 ]
+        python-version: [ 3.6, 3.7, 3.8, 3.9, 3.10 ]
     steps:
     - name: Setup Python
       uses: actions/setup-python@v2
