Add more names the pylint ignore list

--- a/.pylintrc
+++ b/.pylintrc
@@ -430,10 +430,21 @@ good-names=
     _,
     # Custom additions
     a,
+    am,
+    ap,
+    A2,
+    A2_2d_array_z
+    A2_approx,
+    A2_lookup,
     ax,
     b,
+    b_R,
     c,
+    de,
+    dq,
+    du,
     dv,
+    dw,
     e,
     f,
     f1,
@@ -443,15 +454,29 @@ good-names=
     ls,
     n,
     nu,
+    nt,
+    nx,
+    nz,
     p,
+    p1,
+    p2,
+    qT_lookup,
     r,
+    s,
     t,
+    T,
+    Ttilde,
     v,
+    vb,
+    vf,
     vw,
     w,
+    wm,
+    wp,
     x,
     xi,
     y,
+    y0,
     z,
     z0,
     z1
