Add -j auto for Sphinx

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -3,7 +3,8 @@
 
 # You can set these variables from the command line, and also
 # from the environment for the first two.
-SPHINXOPTS    ?=
+# The -j auto parameter has been added in the hope that it would enable parallelization.
+SPHINXOPTS    ?= -j auto
 SPHINXBUILD   ?= sphinx-build
 SOURCEDIR     = .
 BUILDDIR      = _build
