--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ intel-openmp; sys_platform == "darwin"
 matplotlib
 # Numba 0.55 breaks the unit tests
 # https://github.com/numba/numba/issues/7751
-numba != 0.55
+numba != 0.55; python_version < "3.10"
+numba >= 0.55.1; python_version >= "3.10"
 # NumbaLSODA cannot yet be compiled automatically on the GitHub Actions Windows runners
 NumbaLSODA; sys_platform != "win32"
 # If you're using an old version of Numba and get the error:
