Fix compatibility with new NumbaLSODA

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ matplotlib
 numba != 0.55; python_version < "3.10"
 numba >= 0.55.1; python_version >= "3.10"
 # NumbaLSODA cannot yet be compiled automatically on the GitHub Actions Windows runners
-NumbaLSODA; sys_platform != "win32"
+numbalsoda; sys_platform != "win32"
 # If you're using an old version of Numba and get the error:
 # "create_target_machine() got an unexpected keyword argument 'jitdebug'"
 # then you may have to downgrade llvmlite to 0.32.1
