--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ packages =
 python_requires = >=3.6
 
 [options.extras_require]
-NumbaLSODA = NumbaLSODA
+numbalsoda = numbalsoda
 performance =
     icc-rt
     intel-openmp; sys_platform=="darwin"
