--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ build-backend = "setuptools.build_meta"
 # instead of the number of cores available to the job.
 # Therefore it may be wise to set the number of processes manually.
 addopts = "--alluredir=test-results/allure --cov=. --cov-report=html --cov-report=term --cov-report=term-missing --cov-report=xml --dist=loadscope --html=test-results/html/test-report.html --numprocesses=auto"
+norecursedirs = "test_data"
 # python_paths = "tests"
 testpaths = [
     "tests"
