--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: CI
 on: push
 env:
+  # Todo: use Python 3.11 when Numba adds support for it
+  # https://github.com/numba/numba/issues/8304
   PRIMARY_PYTHON_VERSION: '3.10'
 jobs:
   graph:
