--- a/setup.cfg
+++ b/setup.cfg
@@ -19,11 +19,13 @@ install_requires =
     matplotlib
     numba
     numpy
+    plotly
     scipy
 package_dir =
     = .
 packages =
     pttools
+    pttools.analysis
     pttools.bubble
     pttools.speedup
     pttools.ssmtools
