--- a/docs/Makefile
+++ b/docs/Makefile
@@ -23,6 +23,10 @@ all:
 	$(MAKE) latexpdf
 	$(MAKE) epub
 
+clean:
+	rm -rf $(BUILDDIR)/*
+	rm -rf auto_examples/
+
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
