--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -127,7 +127,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.8', '3.9', '3.10']
     steps:
     - name: Setup Python
       uses: actions/setup-python@v2
@@ -174,31 +174,31 @@ jobs:
           test-output.txt
           test-results
         if-no-files-found: error
-  test-numba-old:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    strategy:
-      matrix:
-        python-version: ['3.7']
-    env:
-      PRIMARY_OLD_PYTHON_VERSION: '3.7'
-    steps:
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Print Python version
-      run: python -V
-    - name: Checkout
-      uses: actions/checkout@v3
-    - name: Load pip cache
-      uses: actions/cache@v3
-      with:
-        path: .pip
-        key: pip-${{ runner.os }}-${{ hashFiles('requirements.txt') }}
-        restore-keys: |
-          pip-${{ runner.os }}-
-          pip-
+#  test-numba-old:
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 10
+#    strategy:
+#      matrix:
+#        python-version: ['3.7']
+#    env:
+#      PRIMARY_OLD_PYTHON_VERSION: '3.7'
+#    steps:
+#    - name: Setup Python
+#      uses: actions/setup-python@v2
+#      with:
+#        python-version: ${{ matrix.python-version }}
+#    - name: Print Python version
+#      run: python -V
+#    - name: Checkout
+#      uses: actions/checkout@v3
+#    - name: Load pip cache
+#      uses: actions/cache@v3
+#      with:
+#        path: .pip
+#        key: pip-${{ runner.os }}-${{ hashFiles('requirements.txt') }}
+#        restore-keys: |
+#          pip-${{ runner.os }}-
+#          pip-
     - name: Install requirements
       run: |
         pip --cache-dir=.pip install --upgrade pip
@@ -229,7 +229,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.8', '3.9', '3.10']
     steps:
     - name: Setup Python
       uses: actions/setup-python@v2
