Add pttools.models to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ package_dir =
 packages =
     pttools
     pttools.analysis
+    pttools.models
     pttools.bubble
     pttools.speedup
     pttools.ssmtools
