Add more files to .clocignore

--- a/.clocignore
+++ b/.clocignore
@@ -1,11 +1,18 @@
 .coverage
+.idea
 .pytest_cache
 coverage.xml
 docs/_build
 docs/auto_examples
 docs/gen_examples
+docs/modules/gen_modules
+docs/modules/tests/gen_modules
 htmlcov
 logs
+pylint.txt
 test-results
+tests/bubble/coverage.xml
+tests/bubble/htmlcov
+tests/bubble/test-results
 tests/test_data
 venv
