--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -156,6 +156,10 @@ jobs:
         pip --cache-dir=.pip install -r requirements.txt -r requirements-dev.txt
     - name: Print Numba sysinfo
       run: numba --sysinfo | tee numba-sysinfo.txt
+    - name: Generate reference data
+      run: python3 pttools/bubble/fluid_reference.py
+      env:
+        PYTHONPATH: .
     - name: Run tests
       run: |
         set -o pipefail
@@ -254,6 +258,10 @@ jobs:
         pip --cache-dir=.pip install -r requirements.txt -r requirements-dev.txt
     - name: Print Numba sysinfo
       run: numba --sysinfo | tee numba-sysinfo.txt
+    - name: Generate reference data
+      run: python3 pttools/bubble/fluid_reference.py
+      env:
+        PYTHONPATH: .
     - name: Run tests with coverage
       # Without pytest-pythonpath the PYTHONPATH may have to be set manually
       # PYTHONPATH="${PYTHONPATH}${PYTHONPATH:+:}./tests" pytest | tee test-output.txt
