--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -13,6 +13,12 @@ jobs:
     # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     timeout-minutes: 20
     steps:
+        # Fortran compiler is required for building numbalsoda if a wheel is not available
+        - uses: awvwgk/setup-fortran@v1
+          id: setup-fortran
+          with:
+            compiler: "gcc"
+            version: "12"
         - name: Setup Python
           uses: actions/setup-python@v4
           # macOS minutes cost 10x what Linux does, so testing multiple Python versions would be quite costly
