Add omgw0 module to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ package_dir =
 packages =
     pttools
     pttools.bubble
+    pttools.omgw0
     pttools.speedup
     pttools.ssmtools
 python_requires = >=3.6
