--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@ author_email = mark.hindmarsh@helsinki.fi
 description = Phase transitions in the early universe
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/hindmars-org/pttools
+url = https://github.com/CFT-HY/pttools
 project_urls =
-    Bug Tracker = https://github.com/hindmars-org/pttools/issues
+    Bug Tracker = https://github.com/CFT-HY/pttools/issues
 classifiers =
     Programming Language :: Python :: 3
     # License :: TODO
