Add package version requirements to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,14 +16,14 @@ classifiers =
 
 [options]
 install_requires =
-    h5py
-    kaleido
-    matplotlib
-    numba
-    numpy
-    orjson
-    plotly
-    scipy
+    h5py >= 3.10.0
+    kaleido >= 0.2.1
+    matplotlib >= 3.8.3
+    numba >= 0.59.0
+    numpy >= 1.26.4
+    orjson >= 3.9.14
+    plotly >= 5.19.0
+    scipy >= 1.12.0
 package_dir =
     = .
 packages =
