--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 # List of project requirements for pip
 # https://pip.pypa.io/en/stable/user_guide/#requirements-files
 
-h5py >= 3.10.0
+h5py >= 3.11.0
 # Intel Compile Runtime provides Intel SVML, which speeds up Numba
 icc-rt >= 2019.0 # As of 2023-10, this is the latest supported version on Windows and macOS
 intel-openmp >= 2020.0.133; sys_platform == "darwin"
 # For Plotly image export
 kaleido >= 0.2.1
-matplotlib >= 3.8.3
+matplotlib >= 3.9.1
 # Numba 0.55 breaks the unit tests
 # https://github.com/numba/numba/issues/7751
 # PyCharm does not understand a dependency if all the versions are conditional
 # numba != 0.55; python_version < "3.10"
 # numba >= 0.55.1; python_version >= "3.10"
-numba >= 0.59.0
+numba >= 0.59.0, < 0.60.0
 # NumbaLSODA cannot yet be compiled automatically on the GitHub Actions Windows runners
 numbalsoda >= 0.3.4; sys_platform != "win32"
 # If you're using an old version of Numba and get the error:
@@ -21,9 +21,9 @@ numbalsoda >= 0.3.4; sys_platform != "win32"
 # then you may have to downgrade llvmlite to 0.32.1
 # https://github.com/rapidsai/cuml/issues/2389#issuecomment-642645437
 numpy >= 1.26.4
-orjson >= 3.9.14
-plotly >= 5.19.0
-scipy >= 1.12.0
+orjson >= 3.10.6
+plotly >= 5.23.0
+scipy >= 1.14.0
 # TBB can be used to speed up Numba threading
 # https://numba.pydata.org/numba-doc/latest/user/threading-layer.html#which-threading-layers-are-available
-tbb >= 2021.10.0
+tbb >= 2021.13.0
