--- a/requirements.txt
+++ b/requirements.txt
@@ -13,14 +13,14 @@ matplotlib >= 3.9.1
 # PyCharm does not understand a dependency if all the versions are conditional
 # numba != 0.55; python_version < "3.10"
 # numba >= 0.55.1; python_version >= "3.10"
-numba >= 0.59.0, < 0.60.0
+numba >= 0.60.0
 # NumbaLSODA cannot yet be compiled automatically on the GitHub Actions Windows runners
 numbalsoda >= 0.3.4; sys_platform != "win32"
 # If you're using an old version of Numba and get the error:
 # "create_target_machine() got an unexpected keyword argument 'jitdebug'"
 # then you may have to downgrade llvmlite to 0.32.1
 # https://github.com/rapidsai/cuml/issues/2389#issuecomment-642645437
-numpy >= 1.26.4
+numpy >= 1.26.4, < 2.0.0
 orjson >= 3.10.6
 plotly >= 5.23.0
 scipy >= 1.14.0
