--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,7 @@ jobs:
             pip-
       - name: Install requirements
         run: |
-          pip --cache-dir=.pip install --upgrade pip
-          pip --cache-dir=.pip install --upgrade wheel
+          pip --cache-dir=.pip install --upgrade pip wheel
           pip --cache-dir=.pip install -r requirements.txt -r requirements-dev.txt
       - name: Run Pyreverse
         run: |
@@ -88,8 +87,7 @@ jobs:
             pip-
       - name: Install requirements
         run: |
-          pip --cache-dir=.pip install --upgrade pip
-          pip --cache-dir=.pip install --upgrade wheel
+          pip --cache-dir=.pip install --upgrade pip wheel
           pip --cache-dir=.pip install -r requirements.txt -r requirements-dev.txt
       - name: Run Pylint
         run: pylint pttools tests 2>&1 | tee pylint.txt
@@ -122,8 +120,7 @@ jobs:
 #            pip-
 #      - name: Install requirements
 #        run: |
-#          pip --cache-dir=.pip install --upgrade pip
-#          pip --cache-dir=.pip install --upgrade wheel
+#          pip --cache-dir=.pip install --upgrade pip wheel
 #          pip --cache-dir=.pip install -r requirements.txt
 #      - name: Install FOSSA
 #        run: |
@@ -161,8 +158,7 @@ jobs:
           pip-
     - name: Install requirements
       run: |
-        pip --cache-dir=.pip install --upgrade pip
-        pip --cache-dir=.pip install --upgrade wheel
+        pip --cache-dir=.pip install --upgrade pip wheel
         pip --cache-dir=.pip install -r requirements.txt -r requirements-dev.txt
     - name: Print Numba sysinfo
       run: numba --sysinfo | tee numba-sysinfo.txt
@@ -215,8 +211,7 @@ jobs:
 #          pip-
 #    - name: Install requirements
 #      run: |
-#        pip --cache-dir=.pip install --upgrade pip
-#        pip --cache-dir=.pip install --upgrade wheel
+#        pip --cache-dir=.pip install --upgrade pip wheel
 #        pip --cache-dir=.pip install -r requirements-old.txt -r requirements-dev.txt
 #    - name: Print Numba sysinfo
 #      run: numba --sysinfo | tee numba-sysinfo.txt
@@ -263,8 +258,7 @@ jobs:
           pip-
     - name: Install requirements
       run: |
-        pip --cache-dir=.pip install --upgrade pip
-        pip --cache-dir=.pip install --upgrade wheel
+        pip --cache-dir=.pip install --upgrade pip wheel
         pip --cache-dir=.pip install -r requirements.txt -r requirements-dev.txt
     - name: Print Numba sysinfo
       run: numba --sysinfo | tee numba-sysinfo.txt
