--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,10 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering",
     "Topic :: Scientific/Engineering :: Physics",
     "Topic :: Scientific/Engineering :: Visualization",
@@ -51,6 +54,7 @@ dependencies = [
     "plotly >= 5.24.1",
     "scipy >= 1.14.1",
 ]
+requires-python = ">= 3.10"
 # dynamic = ["version"]
 
 [project.optional-dependencies]
