--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,8 +1,8 @@
 # For Sphinx-Gallery parallelism
-# joblib >= 1.4.2
+# joblib == 1.4.2
 memory-profiler >= 0.61.0
 # myst-parser
-sphinx >= 8.1.3
-sphinx-gallery >= 0.18.0
-sphinx-math-dollar >= 1.2.1
-sphinx-rtd-theme >= 3.0.2
+sphinx == 8.1.3
+sphinx-gallery == 0.18.0
+sphinx-math-dollar == 1.2.1
+sphinx-rtd-theme == 3.0.2
