--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,19 +1,19 @@
 # The dependency files could be combined with the line below, but this would double-install packages
 # if some of the packages are already installed with conda.
 # -r requirements.txt
-allure-pytest >= 2.13.5
-build >= 1.2.2
-colorama >= 0.4.6
-pandas >= 2.2.3
+allure-pytest == 2.13.5
+build == 1.2.2.post1
+colorama == 0.4.6
+pandas == 2.2.3
 # For Numba system info
-psutil >= 6.1.0
-pyan3 >= 1.1.1, != 1.2.0
-pyinstrument >= 3.4.2, < 4.0.0
-pylint >= 3.3.1
-pytest >= 8.3.3
-pytest-cov >= 6.0.0
-pytest-html >= 4.1.1
-pytest-xdist >= 3.6.1
-setuptools >= 75.8.0
-wheel >= 0.45.1
-yappi >= 1.6.10
+psutil == 6.1.1
+pyan3 == 1.1.1  #, != 1.2.0
+pyinstrument == 3.4.2  #, < 4.0.0
+pylint == 3.3.4
+pytest == 8.3.4
+pytest-cov == 6.0.0
+pytest-html == 4.1.1
+pytest-xdist == 3.6.1
+setuptools == 75.8.0
+wheel == 0.45.1
+yappi == 1.6.10
