--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,7 +8,7 @@ pandas == 2.2.3
 # For Numba system info
 psutil == 6.1.1
 pyan3 == 1.1.1  #, != 1.2.0
-pyinstrument == 3.4.2  #, < 4.0.0
+pyinstrument == 5.0.1
 pylint == 3.3.4
 pytest == 8.3.4
 pytest-cov == 6.0.0
