Update documentation and examples

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,8 +29,7 @@ jobs:
             pip-
       - name: Install requirements
         run: |
-          pip --cache-dir=.pip install --upgrade pip
-          pip --cache-dir=.pip install --upgrade wheel
+          pip --cache-dir=.pip install --upgrade pip wheel
           pip --cache-dir=.pip install -r requirements.txt -r requirements-dev.txt -r docs/requirements.txt
       - name: Generate reference data
         run: python3 pttools/bubble/fluid_reference.py
